# RingSwarm

./: .clang-format  CMakeLists.txt
cmake/: Findfuse3.cmake
src/: Assert.h  main.cpp
src/async/: AwaitResumeResult.h  ChainedAwaitObject.h  ChainedAwaitObjectImpl.h  Coroutine.h  EventLoop.cpp  EventLoop.h  EventLoopLock.cpp  EventLoopLock.h  FinalAwait.cpp  FinalAwait.h  Future.h  GetCoroutineHandleAwaitObject.h  Promise.h  PromiseImpl.h  ResumeSuspendAwaitObject.h  Spinlock.h  SuspendThisCoroutineAwaitObject.h  SyncCoroutineWaiter.h  TaskManager.cpp  TaskManager.h  ThreadPool.cpp  ThreadPool.h  coroutine.h
src/client/: CachedKeyHandler.cpp  CachedKeyHandler.h  ExternalKeyHandler.cpp  ExternalKeyHandler.h  FileDownloader.cpp  FileDownloader.h  FileHandler.cpp  FileHandler.h  FileUploader.cpp  FileUploader.h  KeyHandler.cpp  KeyHandler.h
src/core/: ChunkLink.cpp  ChunkLink.h  ChunkRing.h  ChunkSwarm.cpp  ChunkSwarm.h  ConnectionInfo.cpp  ConnectionInfo.h  ConnectionManager.cpp  ConnectionManager.h  FileMeta.cpp  FileMeta.h  FileMetaSwarm.cpp  FileMetaSwarm.h  Id.cpp  Id.h  KeyInfo.cpp  KeyInfo.h  KeySwarm.h  Node.cpp  Node.h  NodeContext.cpp  NodeContext.h  PublicKey.cpp  PublicKey.h  Random.cpp  Random.h  Ring.cpp  RingSwarmException.h  ServerHandlerContext.h  Settings.cpp  Settings.h  Swarm.cpp  Swarm.h  Thread.cpp  Thread.h
src/crypto/: AsymetricalCrypto.cpp  AsymetricalCrypto.h  AsymmetricalCrypto.cpp  AsymmetricalCrypto.h  CryptoException.h  HashCrypto.cpp  HashCrypto.h  KeyPair.cpp  KeyPair.h  Signature.cpp  Signature.h  SymmetricalCrypher.cpp  SymmetricalCrypher.h  SymmetricalCypher.cpp  SymmetricalCypher.h
src/fuse/: FuseController.cpp  FuseController.h  FuseException.h
src/proto/: ClientHandler.cpp  ClientHandler.h  ClientRequestState.cpp  ClientRequestState.h  ClientTransport.cpp  ClientTransport.h  CommandId.h  LongResponseTransport.cpp  LongResponseTransport.h  ProtocolException.h  RequestBuffer.h  RequestHeader.h  ResponseBuffer.h  ResponseHeader.h  ServerHandler.cpp  ServerHandler.h  ServerResponseState.h  TooLargeMessageException.h  TransportClientSideWrapper.cpp  TransportClientSideWrapper.h  TransportServerSideWrapper.cpp  TransportServerSideWrapper.h  UnknownResponseException.h
src/proto/handler/: ChunkChangeEventHandler.cpp  DragIntoFileMetaSwarmHandler.cpp  DragIntoKeySwarmHandler.cpp  GetChunkHandler.cpp  GetChunkLinkHandler.cpp  GetChunkSwarmHandler.cpp  GetFileMetaHandler.cpp  GetFileMetaSwarmHandler.cpp  GetKeyHandler.cpp  GetKeySwarmHandler.cpp  GetNearestChunkHandler.cpp  HandshakeHandler.cpp  NoticeJoinedChunkSwarmHandler.cpp  NoticeJoinedFileMetaSwarmHandler.cpp  NoticeJoinedKeySwarmHandler.cpp  NoticeLeavedChunkSwarmHandler.cpp  SubscribeOnChunkChangeHandler.cpp  UnsubscribeOnChunkChangeHandler.cpp
src/proto/shadow/: GetNodeHandler.cpp  PingHandler.cpp
src/storage/: ChunkIdComparator.h  ChunkRingStorage.cpp  ChunkRingStorage.h  ChunkStorage.cpp  ChunkStorage.h  ChunkSwarmStorage.cpp  ChunkSwarmStorage.h  ClonedEntityException.h  ConnectionsStorage.cpp  ConnectionsStorage.h  FileSwarmStorage.cpp  FileSwarmStorage.h  KeyIndexedStorages.h  KeySwarmStorage.cpp  KeySwarmStorage.h  MappedChunk.cpp  MappedChunk.h  NodeStorage.cpp  NodeStorage.h  Statement.cpp  Statement.h  StorageException.h  StorageManager.cpp  StorageManager.h
src/transport/: BoostSocketServer.h  BoostSocketTransport.cpp  BoostSocketTransport.h  Buffer.cpp  Buffer.h  ClosedTransportException.h  DataSerialisationException.h  PlainSocketServer.cpp  PlainSocketServer.h  PlainSocketTransport.cpp  PlainSocketTransport.h  RequestBuffer.h  ResponseBuffer.cpp  ResponseBuffer.h  SecureOverlayTransport.cpp  SecureOverlayTransport.h  Transport.cpp  Transport.h  TransportBackendException.h  TransportException.h  TransportWrapper.h
src/transport/connectionInfo/: ConnectionInfo.cpp  ConnectionInfo.h  PlainSocketConnectionInfo.cpp  PlainSocketConnectionInfo.h
